Worked on FPGA functionality. Switched to smaller device.

--- a/Lattice_FPGA/.spreadsheet_view.ini
+++ b/Lattice_FPGA/.spreadsheet_view.ini
@@ -3,7 +3,7 @@ pin_sort_type=0
 pin_sort_ascending=true
 sig_sort_type=0
 sig_sort_ascending=true
-active_Sheet=Global Preferences
+active_Sheet=Port Assignments
 
 [Port%20Assignments]
 Name="80,0"
@@ -65,12 +65,12 @@ Prioritize="100,ELLIPSIS"
 [Timing%20Preferences]
 Preference%20Name="165,ELLIPSIS"
 Preference%20Value="106,ELLIPSIS"
-Preference%20Unit="1890,ELLIPSIS"
+Preference%20Unit="1771,ELLIPSIS"
 
 [Group]
 Group%20Type\Name="136,ELLIPSIS"
-Value="2025,ELLIPSIS"
+Value="1906,ELLIPSIS"
 
 [Misc%20Preferences]
 Preference%20Name="118,ELLIPSIS"
-Preference%20Value="2043,ELLIPSIS"
+Preference%20Value="1924,ELLIPSIS"
