--- a/Lattice_FPGA/.floorplanner.ini
+++ b/Lattice_FPGA/.floorplanner.ini
@@ -11,4 +11,4 @@ showUGROUPs=true
 showPARITIONs=true
 showLogicalConnections=false
 dontShowBBoxOverlapWarning=false
-sceneInViewRect=@Variant(\0\0\0\x14\xc0\xde\\\xcbKKKL\xc0lC\xc3\xc3\xc3\xc3\xc4\x41\fJ\xd4\xb4\xb4\xb4\xb4@\xf9\x8fG\x87\x87\x87\x88)
+sceneInViewRect=@Variant(\0\0\0\x14\xc0\xf1`\xcciEb\x18\xc0\xd9R\x19\x1f\x1aQYA\rx\x9c\xa2\xb1\v\xf7@\xf9\xea\xfaQX\x85\xfc)
